# modpm

./: Cargo.toml  README.md  readme.md
.github/workflows/: cargo.yml
src/: data_structs.rs  lib.rs  main.rs  modrinth.rs  polymc.rs
