[package]
name = "modpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
futures-util = "0.3.14"
progress_bar = "1.0.2"
urlencoding = "2.1.0"
clap = {version = "3.2.5", features = ["cargo"]}
