[package]
name = "modpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = {version = "1.0.137", features = ["derive"]}
futures-util = "0.3.14"
progress_bar = "1.0.2"
clap = {version = "3.2.5", features = ["cargo"]}
ansi_term = "0.12.1"
sha2 = "0.10.2"
hex = "0.4.3"
chrono = "0.4.19"
