[package]
name = "modpm"
version = "1.4.2"
edition = "2021"
license = "NPOSL-3.0"
description = "A Minecraft mod package manager"
repository = "https://github.com/Lisenaaaa/modpm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.137", features = ["derive"]}
futures-util = "0.3.14"
indicatif = "0.17.0"
clap = {version = "3.2.5", features = ["cargo"]}
ansi_term = "0.12.1"
sha2 = "0.10.2"
hex = "0.4.3"
chrono = "0.4.19"
async-recursion = "1.0.0"
json5 = "0.4.1"
serde_derive = {version = "1.0.143", features = ["deserialize_in_place"]}
serde_json = "1.0"
